src/test/ui/coherence/coherence-fn-covariant-bound-vs-static.stderr
error[E0119]: conflicting implementations of trait `Trait` for type `for<'r> fn(fn(&'r ()))`:
  --> $DIR/coherence-fn-covariant-bound-vs-static.rs:17:1
   |
LL | impl Trait for for<'r> fn(fn(&'r ())) {}
   | ------------------------------------- first implementation here
LL | impl<'a> Trait for fn(fn(&'a ())) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `for<'r> fn(fn(&'r ()))`
   |
   = note: this behavior recently changed as a result of a bug fix; see rust-lang/rust#56105 for details

error: aborting due to previous error

For more information about this error, try `rustc --explain E0119`.
